Add School Enrollment and Classroom options
Updated entities, views, and controllers to include School Enrollment and Classroom tracking. Added School Languages and fixed Location views.

--- a/MEL.Web/appsettings.json
+++ b/MEL.Web/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MEInsight;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=meinsight;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
